# Scouting-Analysis

./: .gitignore  .pre-commit-config.yaml  .pylintrc  2026ndgf.json  CLAUDE.md  README.md  activate.ps1  index.html  manifest.json  picklist.html  pyproject.toml  requirements.txt  schedule_picklist.ps1  scouting-416713-4facc40c236a.json  scouting-416713-741bac7a780a.json  setup.bat  setup.ps1  tox.ini  unschedule_picklist.ps1
.github/workflows/: notify_slack.yaml
src/scouting_analysis/: constants.py  crescendo_picklist_analysis.py  frc2026_picklist_analysis.py  frc2026_picklist_runner.py  gd.py  match_planner.py  picklist_runner.py  reefscape_picklist_analysis.py  sb.py  sdb.py  tba.py
webapp/: 2026gal_picklist.json  2026gal_planner.json  2026mnmi2_picklist.json  2026mnmi2_planner.json  2026mnst_picklist.json  2026mnst_planner.json  2026ndgf.json  2026ndgf_picklist.json  2026ndgf_planner.json  index.html  latest_picklist.json  latest_planner.json  manifest.json  picklist.html  planner.html
webapp/webapp/: 2026ndgf_picklist.json  2026ndgf_planner.json  latest_picklist.json
