[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "line-too-long"

[tool.pylint.'FORMAT']
expected-line-ending-format = "CRLF"

[tool.hatch.build.targets.wheel]
packages = ["src/scouting_analysis"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Scouting-Analysis"
version = "0.0.0"
description = "Tools to analyze FRC4607 scouting data"
requires-python = ">=3.7"